--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,11 +24,11 @@
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
+                android:windowSoftInputMode="adjustResize"
                 android:label="@string/app_name"
                 android:theme="@style/Theme.Walkmini">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
